provided device name for custom intent

--- a/HeartBeatTrackerDemo.xcodeproj/xcshareddata/xcschemes/TrackerIntent.xcscheme
+++ b/HeartBeatTrackerDemo.xcodeproj/xcshareddata/xcschemes/TrackerIntent.xcscheme
@@ -47,7 +47,7 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      intentQueryString = "My tracker"
+      intentQueryString = "Monitor my heart rate"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
@@ -81,7 +81,7 @@
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
-      intentQueryString = "My tracker"
+      intentQueryString = "Monitor my heart rate"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
