--- a/TrackerIntent/Info.plist
+++ b/TrackerIntent/Info.plist
@@ -26,11 +26,14 @@
 		<dict>
 			<key>IntentsRestrictedWhileLocked</key>
 			<array/>
+			<key>IntentsRestrictedWhileProtectedDataUnavailable</key>
+			<array/>
 			<key>IntentsSupported</key>
 			<array>
-				<string>INSendMessageIntent</string>
 				<string>INSearchForMessagesIntent</string>
+				<string>INSendMessageIntent</string>
 				<string>INSetMessageAttributeIntent</string>
+				<string>TrackerIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
