--- a/TrackerIntentUI/Info.plist
+++ b/TrackerIntentUI/Info.plist
@@ -27,6 +27,7 @@
 			<key>IntentsSupported</key>
 			<array>
 				<string>INSendMessageIntent</string>
+				<string>TrackerIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
