--- a/HeartBeatTrackerDemo.xcodeproj/xcshareddata/xcschemes/TrackerIntentUI.xcscheme
+++ b/HeartBeatTrackerDemo.xcodeproj/xcshareddata/xcschemes/TrackerIntentUI.xcscheme
@@ -47,6 +47,7 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
+      intentQueryString = "Monitor my heart rate"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
@@ -70,6 +71,7 @@
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
+      intentQueryString = "Monitor my heart rate"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
